move files of img processing to preprocessing folder, start ipynb with some more preprocessing and future rnn

--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,4 @@
-TRAILERS_FOLDER: "/Volumes/HD710/natasha-diploma/trailers_mp4/"
-VIDEO_INFO_FOLDER: "/Volumes/HD710/natasha-diploma/videoinfo/"
-AUDIO_FOLDER: "/Volumes/HD710/natasha-diploma/audio_wav/"
+TRAILERS_FOLDER: "/Volumes/Seagate/natasha-diploma/trailers_mp4/"
+VIDEO_INFO_FOLDER: "/Volumes/Seagate/natasha-diploma/videoinfo/"
+AUDIO_FOLDER: "/Volumes/Seagate/natasha-diploma/audio_wav/"
+AUDIO_INFO_FOLDER: "/Volumes/Seagate/natasha-diploma/audioinfo/"
